[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/backgrounds/MainMenuBackground/background.png" type="Texture" id=1]
[ext_resource path="res://src/UI/MainTitle/Title.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/backgrounds/LevelUiDisplay/level_display_ui.jpeg" type="Texture" id=3]
[ext_resource path="res://assets/buttons/MainMenuButton/main_menu.png" type="Texture" id=4]
[ext_resource path="res://src/UI/PlayButton/PlayButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/UI/LevelMenuScreen/LevelMenu.gd" type="Script" id=6]
[ext_resource path="res://assets/fonts/EquipmentPro.otf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 150
font_data = ExtResource( 7 )

[node name="LevelMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -420, -63 )
script = ExtResource( 6 )
__meta__ = {
"_edit_vertical_guides_": [ 199.0 ]
}

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -100
offset = Vector2( -85, 0 )
scale = Vector2( 0.84, 0.84 )
transform = Transform2D( 0.84, 0, 0, 0.84, -85, 0 )

[node name="Background" type="TextureRect" parent="BackgroundLayer"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="BackButton" type="Button" parent="."]
margin_left = 475.0
margin_top = 300.0
margin_right = 505.0
margin_bottom = 600.0
rect_scale = Vector2( 3, 1 )

[node name="LevelNumber" type="Button" parent="."]
margin_left = 580.0
margin_top = 300.0
margin_right = 1592.0
margin_bottom = 1306.0
rect_scale = Vector2( 0.3, 0.3 )
icon = ExtResource( 3 )

[node name="NumberLayer" type="CanvasLayer" parent="LevelNumber"]

[node name="NumberLabel" type="Label" parent="LevelNumber/NumberLayer"]
margin_left = 575.0
margin_top = 300.0
margin_right = 879.0
margin_bottom = 602.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="ForwardButton" type="Button" parent="."]
margin_left = 900.0
margin_top = 300.0
margin_right = 1000.0
margin_bottom = 600.0

[node name="Title" parent="." instance=ExtResource( 2 )]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 720, 450 )
current = true

[node name="PlayButton" parent="." instance=ExtResource( 5 )]
margin_left = 548.0
margin_top = 642.0
margin_right = 900.0
margin_bottom = 776.0
next_scene_path = "res://src/Scenes/RollingTheDice/RollingTheDice.tscn"

[node name="MainMenuButton" parent="." instance=ExtResource( 5 )]
margin_top = 20.0
margin_bottom = 154.0
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 4 )
next_scene_path = "res://src/UI/MainMenuScreen/MainMenu.tscn"

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="ForwardButton" to="." method="_on_ForwardButton_pressed"]
